<?xml version="1.0"?>
<package format="2">
  <name>ros1_msgs</name>
  <version>0.0.0</version>
  <description>The beginner_tutorials package</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
